PR/43023: Bruce Cran: FTPD bug remote crash Since we specify NOCHECK, in the NOMATCH case gl_pathv can be NULL. (From FreeBSD)